# optimize-gemm

./: CMakeLists.txt  LICENSE.md  README.md  bench-gemm.cxx  gemm.hxx  gemm_autovec.hxx  gemm_blas.hxx  gemm_std.hxx  init.hxx  notebook.ipynb  test-autovec.cxx
